feat: add styles for pokemon details page

--- a/styles/antd-custom.less
+++ b/styles/antd-custom.less
@@ -25,32 +25,19 @@
   }
 }
 
-.ant-typography.application-title {
-  margin: 0;
-  line-height: 1;
-}
-
-.ant-typography.technology-subtitle {
-  font-size: 14px;
-  line-height: 0px;
-  margin: 10px 0 20px;
-}
-
 .ant-input-search {
   max-width: 250px;
-}
-
-.pokemons-container > .ant-col {
-  padding: 8px 12px 8px 0 !important;
 }
 
 .ant-tag {
   display: flex !important;
   justify-content: center;
+  font-size: @font-size-xs !important;
+  font-weight: 500;
 
   &.ant-tag-magenta {
-    background: #F78D8D;
-    border-color: #F78D8D;
+    background: @secondary-color;
+    border-color: @secondary-color;
     color: @white-color;
   }
 }
