--- a/styles/pages/search.less
+++ b/styles/pages/search.less
@@ -23,7 +23,7 @@
   .pokemon-name {
     font-weight: bold;
     color: @white-color;
-    font-size: @font-size-sm;
+    font-size: @font-size-md;
     max-width: 100%;
     overflow: hidden;
     width: 100%;
@@ -52,4 +52,19 @@
       }
     }
   }
+}
+
+.ant-typography.application-title {
+  margin: 0;
+  line-height: 1;
+}
+
+.ant-typography.technology-subtitle {
+  font-size: 14px;
+  line-height: 0px;
+  margin: 10px 0 20px;
+}
+
+.pokemons-container > .ant-col {
+  padding: 8px 12px 8px 0 !important;
 }
