feat: use framer motion to apply transitions

--- a/styles/pages/search.less
+++ b/styles/pages/search.less
@@ -68,3 +68,7 @@
 .pokemons-container > .ant-col {
   padding: 8px 12px 8px 0 !important;
 }
+
+.pokemons-container .motion-container {
+  height: 100%;
+}
